--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,9 @@
   "printWidth": 120,
   "singleQuote": true,
   "semiColons": true,
-  "trailingComma": "none",
+  "trailingComma": "es5",
   "jsxSingleQuote": false,
-  "tabWidth": 4
+  "tabWidth": 4,
+  "endOfLine": "auto",
+  "editorconfig": true
 }
