--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^6.1.0",
@@ -23,7 +24,6 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
-    "stripe": "^12.18.0",
     "validator": "^13.11.0"
   }
 }
