--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --config webpack/webpack.config.js --env env=development --open",
+    "start": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack.js serve --config webpack/webpack.config.js --env env=development --open",
     "build": "webpack --config webpack/webpack.config.js --env env=production"
   },
   "keywords": [],
@@ -18,17 +18,18 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
     "@mui/x-date-pickers": "^6.14.0",
+    "@paypal/paypal-js": "^7.0.3",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^1.9.5",
-    "@stripe/react-stripe-js": "^2.3.0",
-    "@stripe/stripe-js": "^2.1.5",
     "axios": "^1.5.0",
+    "country-state-city": "^3.2.1",
     "form-data": "^4.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
