--- a/admin/package.json
+++ b/admin/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack.js serve --config webpack/webpack.config.js --env env=development --open",
+    "start": "webpack serve --config webpack/webpack.config.js --env env=development --open",
     "build": "webpack --config webpack/webpack.config.js --env env=production",
     "dev": "node src/index.js"
   },
