--- a/admin/package.json
+++ b/admin/package.json
@@ -22,6 +22,7 @@
     "@babel/runtime": "^7.23.2",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
