--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack.js serve --config webpack/webpack.config.js --env env=development --open",
+    "start": "webpack serve --config webpack/webpack.config.js --env env=development --open",
     "build": "webpack --config webpack/webpack.config.js --env env=production"
   },
   "keywords": [],
@@ -46,6 +46,7 @@
     "@babel/runtime": "^7.22.15",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
+    "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
