--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,6 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
     "@mui/x-date-pickers": "^6.14.0",
-    "@paypal/paypal-js": "^7.0.3",
-    "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "country-state-city": "^3.2.1",
@@ -27,6 +25,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-toastify": "^9.1.3",
@@ -48,6 +47,8 @@
     "css-loader": "^6.8.1",
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.3",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
