--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
     "@mui/x-date-pickers": "^6.14.0",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
     "country-state-city": "^3.2.1",
