--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "styled-components": "^5"
+    "styled-components": "^5",
+    "swiper": "^11.0.5"
   },
   "proxy": "http://localhost:5000/",
   "devDependencies": {
